www.filebot.net/base.css
body {
	font-family: Arial, DejaVu Sans, FreeSans;
	font-size: 16px;
	background-color: #e6e6e6;
	margin-top: 0;
}

h1 {
	font-size: 24px;
	font-weight: bold;
	margin-left: 65px;
	margin-right: 40px;
	letter-spacing: 0.03em;
}

a, abbr {
	color: #5c7684;
	text-decoration: none;
	border: none;
}

a:hover {
	text-decoration: underline;
	border-bottom: none;
}

img, video {
	vertical-align: middle;
	border: none;
}

hr {
	border-style: dashed; 
	border-width: thin 0 0 0; 
	border-color: lightgray;
}


/* -------------------- NAVIGATION -------------------- */


div.navigation {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
	position: absolute;
	width: 80px;
	right: 0px;
	top: 20px;
	opacity: 0.8;
}

div.navigation ul {
	list-style-type: none;
}

div.navigation a {
	color: #3366FF;
	text-decoration:none;
}

div.navigation a:hover, div.navigation a:focus {
	color: #FF6600;
}

div.navigation ul {
	padding: 0;
	margin: 0;
}

div.navigation a {
	display: block;
	font-weight: normal;
	letter-spacing: 0.1em;
	text-decoration: none;
	padding: 7px 5px;
	background-image: url(nav-a-bg.svg);
	background-repeat: no-repeat;
	background-position: left 90%;
	background-size: 150px 3px;
}

div.navigation a:hover, .navigation a:focus {
	background-image: url(nav-a-bg-h.svg);
	background-size: 100px 3px;
}


/* -------------------- PAGE -------------------- */


div.page {
	position: relative;
	margin: 20px auto;
	width: 760px;
	min-height: 800px;
	padding: 20px;
	background: white;
	background-repeat: no-repeat;
	border: thin solid #a2a2a2;
	border-radius: 7px;
	box-shadow: 0px 2px 5px #a2a2a2;
	overflow: visible;
}

div.header {
	margin-left: 25px;
	margin-right: 80px;
	margin-bottom: 50px;
}

div.header img.logo {
	float: left;
	margin-top: -6px;
	margin-left: -8px;
}

div.header span.description {
	display: block;
	color: #888888;
	font-size: 70%;
	font-weight: normal;
	font-style: italic;
	letter-spacing: normal;
}

div.metrics {
	margin: 25px;
	min-height: 25px;
	text-align: center;
}

div.footer p {
	font-size: xx-small;
	text-align: center;
	margin: 0em;
	padding 0em;
	position: relative;
	top: 0.6em;
	left: 2em;
}

a.box {
	display: block;
	padding: 10px;
	min-height: 45px;
	max-width: 345px;
	background-color: #F5F5F5;
	border-radius: 4px;
	box-shadow: 0 2px 5px #A2A2A2;
	background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
}

a.box:link {
	text-decoration: none;
}

a.box:focus {
	outline: none;
	background-color: #FAFAD2;
}


/* -------------------- MEDIA -------------------- */


img.screenshot {
	filter: drop-shadow(0px 2px 5px #00000050);
}

div.screenshot {
	float: right;
}

div.zoom {
	position: relative;
	z-index: 10;
	transition: all 0.3s ease-in-out;
}

div.zoom:hover {
	z-index: 20;
}

div.screenshot.about.zoom:hover {
	transform: translate(-230px, 180px) scale(3.27);
}

div.screenshot.about {
	position: relative;
	margin: 37px 20px 10px 20px;
}

div.video {
	height: 480px;
	margin: 20px 0px;
}

div.video iframe {
	display: block;
	margin: 0 auto;
	width: 750px;
	height: 465px;
	background-color: black;
	border: 4px black solid;
	box-shadow: 2px 2px 5px #a2a2a2;
	border-radius: 4px;
}

div.video.zoom:hover {
	transform: translate(0px, -68px) scale(1.4);
}


/* -------------------- SECTION -------------------- */


div.section.tutorial ol {
	list-style-position: inside;
	background-color: #EFEFEF;
	font-family: Verdana, Helvetica, Arial, sans-serif;
	font-size: 13px;
	margin: 12px 25px 15px 25px;
	padding: 8px 15px 9px 15px;
	border-radius: 7px;
}

div.section.tutorial code {
	margin: 12px 25px 15px 25px;
	padding: 8px 15px 9px 15px;
	border-radius: 7px;
}

div.section.tutorial img {
	vertical-align: top;
}

div.section {
	clear: both;
	margin-top: 45px;
}

div.section.about {
	clear: none;
	max-width: 415px;
}

div.section img.icon {
	float: left;
	margin-right: 10px;
}

div.section h2 {
	font-size: 20px;
	padding-top: 12px;
	margin-bottom: 20px;
}

div.section p, div.section div.description {
	margin: 16px 0px 0px 10px;
}

div.section span.quote {
	float: right;
	margin-top: 12px;
	color: #888;
	font-size: 11px;
}

span.quote:before, span.label:before {
	content: open-quote;
}

span.quote:after, span.label:after {
	content: close-quote;
}


/* -------------------- FEATURES -------------------- */


div.section > ul.list > li {
	margin-top: 10px;
	margin-bottom: 10px;
}

div.section > ul.list > li li {
	margin-top: 2px;
}

span.note.mediainfo {
	font-size: 80%;
	font-style: italic;
	color: #3E8D39;
}

span.note.mediainfo:before {
	content: image-set("images/plugin.webp" 2x);
	position: relative;
	top: 2px;
	margin-right: 2px;
}

span.note.anime {
	font-size: 80%;
	font-style: italic;
	color: #D76F04;
}

span.note.anime:before {
	content: image-set("images/asterisk.webp" 2x);
	position: relative;
	top: 4px;
	margin-left: 2px;
	margin-right: 2px;
}

div.section.features > ul.next {
	clear: both;
	padding-top: 5px;
	border-top: thin dashed lightgray;
}

div.section.features div.screenshot {
	position: relative;
	margin-bottom: 10px;
}


div.section.features div.screenshot.zoom:hover {
	transform: translate(-300px, 135px) scale(7.14);
}


/* -------------------- DOWNLOAD -------------------- */


div.section.download a.highlight {
	margin: 2px;
	padding: 4px;
	border-radius: 6px;
	background-color: rgba(50, 150, 220, 0.1);
	box-shadow: 0 0 6px rgba(50, 150, 220, 0.8);
}

div.section.download a.highlight:hover {
	text-decoration: none;
	background-color: rgba(50, 150, 220, 0.2);
	box-shadow: 0 0 10px rgba(50, 150, 220, 1.0);
	transition: all 0.1s ease-in-out;
}


/* -------------------- DOCUMENTATION -------------------- */


div.about.column {
	width: 390px;
}

div.screenshot.column {
	float: right;
	background: none;
	margin-top: 30px;
	margin-left: 20px;
	margin-right: 5px;
}

div.screenshot.column img {
	border-radius: 4px;
}

div.content h3 {
	font-size: 14px;
	margin: 25px 15px -8px 15px;
}

ul.repository {
	background-color: #FDFDFF;
	border: thin dotted lavender;
	margin: 15px 20px 40px 20px;
	padding: 10px 20px;
	width: 680px;
	columns: 2;
	list-style-position: inside;
}

ul.repository li {
	padding: 5px
}

p.suggestion {
	border: thin dotted lightgray;
	background-color: GhostWhite;
	padding: 8px;
	margin: 25px 10px 45px 10px;
}


/* -------------------- REFERENCE -------------------- */


table.reference  {
	margin: 0 auto;
	border-collapse: collapse;
}

table.reference > tbody > tr > th, table.reference > tbody > tr > td {
	padding: 5px 20px 5px 16px;
	white-space: nowrap;
}

table.reference > tbody > tr > td {
	border-top: thin dotted lavender;
}

small.comment, a.source {
	font-size: xx-small;
	font-weight: normal;
	color: lightgray;
	margin-left: 2px;
}

